# Python_find_job_with_python_and_algorithms

./: al_plus_multiple.py  al_same_name.py  al_sum_n.py  compare.py  factorial_2.py  fibonacci.py  find_same_in_dict.py  find_samething_2.py  find_samething_3.py  graph.py  graph_2.py  indeed.py  insert_sort_2.py  main.py  make_pair.py  maxprofit.py  maxprofit_2.py  palindrome.py  palindrome_2.py  plus1toN.py  pyproject.toml  recursive_find_max.py  return_info.py  sel_sort.py  sel_sort_2.py  sequential_search_all.py  sof.py  sum_n_square_2.py
algorithms/: al_factorial.py  al_fibonacci.py  al_hanoi.py  al_insert_sort.py  al_max_index.py  al_max_num.py  al_same_name.py  al_selection_sort.py  al_selection_sort_2.py  al_sequential_search.py  binary_search.py  binary_search_2.py  factorial.py  find_in_two_list.py  find_max.py  find_max_2.py  find_max_idx.py  find_same.py  find_samething.py  hanoitower.py  insert_sort.py  maze.py  merge_sort.py  merge_sort_2.py  sel_sort_2.py  sequential_search.py  sum_n_2.py  sum_n_3.py  sum_n_square.py
test/test/: english_french_dict.py
