[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "chocolatethornycodes"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
hanoi = "^0.0.4"
python = "^3.8"
requests = "^2.23"
[tool.poetry.dev-dependencies]
